Fix hero text on mobile

--- a/main.css
+++ b/main.css
@@ -166,7 +166,7 @@ li a:hover:not(.active) {
         grid-auto-rows: auto;
         text-align: center;
         position: absolute;
-        top: 50%;
+        top: 35%;
         left: 50%;
         transform: translate(-50%, -50%);
         color: white;
